# CAAF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  caaf.md  csaf.md
include/engine/: actor.h  caaf.h  io.h  lzma.h  model.h
src/: console.cpp  main.cpp
src/engine/: caaf.cpp  io.cpp  lzma.cpp  model.cpp
